2012-03-15  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Fixed the function "set_new_agent"
	to refer to the proper $config.

2012-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: added lost lines.

2012-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: fixes and changes for to show better the
	html reports.
	
	* include/functions_groups.php: cleaned source code.
	
	* include/functions.php: fixed and changed the function "string2image" to
	create the text with any size and use ttf font.
	
	Merged from the branch pandora_4.0

2012-03-14  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/alerts/alert_actions.php
	  godmode/alerts/alert_commands.php
  	  godmode/alerts/alert_templates.php
	  godmode/alerts/configure_alert_template.php
	  godmode/modules/manage_nc_groups.php
	  godmode/modules/manage_netwok_components.php
	  godmode/modules/manage_network_templates.php
	  godmode/modules/manage_network_templates_form.php
	  godmode/reporting/graph_builder.php
	  godmode/reporting/graphs.php
	  godmode/reporting/map_builder.php
	  godmode/reporting/reporting_builder.php
	  godmode/reporting/visual_console_builder.php
	  godmode/snmpconsole/snmp_alert.php
	  godmode/tag/edit_tag.php
	  godmode/tag/tag.php
	  include/functions_config.php
	  include/functions_events.php: Extended system audit log.

2012-03-14  Sergio Martin <sergio.martin@artica.es>

	* operation/reporting/reporting_viewer.php: Changed a bad
	translation string

2012-03-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: fixed into function
	"pch_slicebar_graph" unset var $antialias.

	Merged bugfix from branch pandora_4.0

2012-03-14  Junichi Satoh  <junichi@rworks.jp>

	* operation/incidents/incident.php: Replaced substr() with
	ui_print_truncate_text().

2012-03-13 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php: added button near to